# call-analytics-case-study

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile.pipelines  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/ISSUE_TEMPLATE/: submission.md
agents/: classifier.py  compliance.py  quality.py  summarizer.py
api/: main.py
app/: aligner.py  audio_source.py  config.py  diarizer.py  metrics.py  observability.py  response_presenter.py  role_mapper.py  schemas.py  transcriber.py
app/agents/: __init__.py  analysis_chat.py  base.py  classifier.py  compliance.py  quality.py  summarizer.py  supervisor.py
app/api/: audio_source.py  jobs.py  main.py
app/asr/: __init__.py  aligner.py  audio_normalizer.py  audio_source.py  diarizer.py  role_mapper.py
app/llm/: __init__.py  client.py
openwebui_functions/: install.py  mtbank_progress.py
pipelines/: pipeline.py
scripts/: check_network.sh  evaluate_wer.py  up.sh
test_case/: README.md
tests/: test_agent_contracts.py  test_agent_schemas.py  test_agents.py  test_analysis_jobs.py  test_api_audio_source.py  test_api_contract.py  test_audio_analysis_service.py  test_classifier.py  test_compliance_service.py  test_complience_agent.py  test_config.py  test_llm_client.py  test_metrics.py  test_observability.py  test_orchestrator.py  test_pipeline.py  test_progress_function.py  test_quality_agent.py  test_quality_service.py  test_response_presenter.py  test_summarizer_agent.py  test_summary_service.py  test_supervisor.py  test_transcriber.py  test_wer_evaluation.py
(+48 files in other folders)
