[project]
name = "call-analytics-case-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "faster-whisper>=1.2.1",
    "httpx>=0.28.1",
    "openai>=1.68.0",
    "pyannote-audio>=4.0.7",
    "prometheus-client>=0.21.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=0.23.0",
    "python-multipart==0.0.20",
    "jiwer>=4.0.0",
]
